# grpc-demo-tonic

./: Cargo.toml  README.md  musig-trade-protocol-messages.txt  pom.xml
rpc/: Cargo.toml  README.md  build.rs  pom.xml
rpc/src/: protocol.rs  server.rs
rpc/src/main/java/bisq/: Client.java  TradeProtocolClient.java
rpc/src/main/proto/: helloworld.proto
src/: protocol.rs  server.rs  storage.rs
src/main/java/bisq/: TradeProtocolClient.java
src/main/proto/: helloworld.proto
