[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
futures = "0.3.31"
musig2 = "0.2.3"
prost = "0.13.4"
secp = { version = "0.4.1", features = ["rand"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = "0.1.17"
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
